@@ -52,8 +52,7 @@ __Magpie_handle_job_name_corner_cases () {
     fi
 }
 
-# slurmsbatch & msubslurm & msubtorque legacy values
-if [ "${MAGPIE_SUBMISSION_TYPE}" == "slurmsbatch" ] || [ "${MAGPIE_SUBMISSION_TYPE}" == "sbatchsrun" ]
+if [ "${MAGPIE_SUBMISSION_TYPE}" == "sbatchsrun" ]
 then
     export MAGPIE_CLUSTER_NODERANK="${SLURM_NODEID:=0}"
     export MAGPIE_NODE_COUNT="${SLURM_NNODES}"
@@ -68,7 +67,7 @@ then
         __Magpie_calc_slurm_magpie_timelimit
     fi
     __Magpie_handle_job_name_corner_cases
-elif [ "${MAGPIE_SUBMISSION_TYPE}" == "msubslurm" ] || [ "${MAGPIE_SUBMISSION_TYPE}" == "msubslurmsrun" ]
+elif [ "${MAGPIE_SUBMISSION_TYPE}" == "msubslurmsrun" ]
 then
     export MAGPIE_CLUSTER_NODERANK="${SLURM_NODEID:=0}"
     export MAGPIE_NODE_COUNT="${SLURM_NNODES}"
@@ -81,7 +80,7 @@ then
         __Magpie_calc_slurm_magpie_timelimit
     fi
     __Magpie_handle_job_name_corner_cases
-elif [ "${MAGPIE_SUBMISSION_TYPE}" == "msubtorque" ] || [ "${MAGPIE_SUBMISSION_TYPE}" == "msubtorquepdsh" ]
+elif [ "${MAGPIE_SUBMISSION_TYPE}" == "msubtorquepdsh" ]
 then
     export MAGPIE_CLUSTER_NODERANK="$(($(echo ${MOAB_NODELIST} | sed 's/&/\n/g' | grep -n ${HOSTNAME} | cut -f1 -d:) - 1))"
     export MAGPIE_NODE_COUNT="${PBS_NUM_NODES}"
